--- a/templates/index.html
+++ b/templates/index.html
@@ -3,7 +3,6 @@
 <head>
   <meta charset="UTF-8">
   <title>영어 퀴즈 시작</title>
-  <!-- Bootstrap CSS 추가 -->
   <link href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.2.0/css/bootstrap.min.css" rel="stylesheet">
   <style>
     body {
@@ -19,6 +18,25 @@
       box-shadow: 0 0 15px rgba(0,0,0,0.1);
     }
   </style>
+  <script>
+    function onTopicChange() {
+      var selectedTopic = document.querySelector('input[name="topic"]:checked').value;
+      var subLabel = document.getElementById("sub-category-label");
+      var subOptions = document.querySelectorAll('label.sub-option');
+      subLabel.innerText = selectedTopic.charAt(0).toUpperCase() + selectedTopic.slice(1) + " 서브 카테고리 선택:";
+      subOptions.forEach(function(label, index) {
+        label.innerText = selectedTopic.charAt(0).toUpperCase() + " " + (index + 1);
+      });
+    }
+
+    window.onload = function() {
+      onTopicChange();
+      var topicRadios = document.getElementsByName("topic");
+      for (var i = 0; i < topicRadios.length; i++) {
+        topicRadios[i].addEventListener("change", onTopicChange);
+      }
+    }
+  </script>
 </head>
 <body>
   <div class="quiz-container">
@@ -37,6 +55,21 @@
         <div class="form-check form-check-inline">
           <input class="form-check-input" type="radio" name="topic" id="idioms" value="idioms">
           <label class="form-check-label" for="idioms">Idioms</label>
+        </div>
+      </div>
+      <div class="mb-3" id="sub-options">
+        <label class="form-label" id="sub-category-label">서브 카테고리 선택:</label><br>
+        <div class="form-check form-check-inline">
+          <input class="form-check-input" type="radio" name="sub_category" id="sub1" value="1" checked>
+          <label class="form-check-label sub-option" for="sub1">Topic 1</label>
+        </div>
+        <div class="form-check form-check-inline">
+          <input class="form-check-input" type="radio" name="sub_category" id="sub2" value="2">
+          <label class="form-check-label sub-option" for="sub2">Topic 2</label>
+        </div>
+        <div class="form-check form-check-inline">
+          <input class="form-check-input" type="radio" name="sub_category" id="sub3" value="3">
+          <label class="form-check-label sub-option" for="sub3">Topic 3</label>
         </div>
       </div>
       <div class="mb-3">
