--- a/templates/index.html
+++ b/templates/index.html
@@ -40,7 +40,7 @@
 </head>
 <body>
   <div class="quiz-container">
-    <h2 class="mb-4 text-center">Activities for Hoobong teacher in JEI middle school</h2>
+    <h2 class="mb-4 text-center">Activities for JEI middle school</h2>
     <form method="POST" action="/start">
       <div class="mb-3">
         <label class="form-label">Select Topic:</label><br>
